# openmap

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.example.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260426_0001_init_schemas_postgis.py  20260426_0002_core_and_staging_tables.py  20260426_0003_mart_tables.py  20260426_0004_territory_geometries.py
app/: config.py  main.py
app/api/: error_handlers.py
app/core/: errors.py
app/scripts/: import_boundaries.py  seed.py  wait_for_db.py
app/security/: access.py  middleware.py  roles.py
app/services/: importer.py  territory_geometry.py
docs/: frontend-overview.md
docs/adr/: 0001-tech-stack.md  0002-data-layering.md  0003-legacy-assets-policy.md
docs/api/: endpoints.md
docs/data-model/: import-flow.md  schema-overview.md
docs/legacy/: field-mapping.md  legacy-map-assets.md  legacy-summary.md
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx  i18n.ts  main.tsx  styles.css  vite-env.d.ts
legacy_assets/dictionaries/: data.js  index.js  mkb10Code.js  (+7 more)
legacy_scan/: initdata_files.txt  map_candidates.txt  sizes.txt  tile_sample_files.txt  tileserver_overview.txt
tests/: conftest.py  test_access_and_errors.py  test_aggregates.py  test_api.py  test_api_aggregates.py  test_importer.py  test_pagination_filters.py  test_startup_config.py
(+33 files in other folders)
